--- a/Project/Project2Proposal/api/package.json
+++ b/Project/Project2Proposal/api/package.json
@@ -10,6 +10,7 @@
   "author": "Lucien Cusson-Fradet",
   "license": "ISC",
   "dependencies": {
+    "body-parse": "^0.1.0",
     "express": "^4.17.3"
   }
 }
