P2: Starting to work on Project 2 again...

--- a/Project/Project2Proposal/server/package.json
+++ b/Project/Project2Proposal/server/package.json
@@ -2,10 +2,10 @@
   "name": "recipe_data",
   "version": "0.0.1",
   "description": "Prototype for node server that saves recipe data from users",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "author": "Lucien Cusson-Fradet",
   "license": "ISC",
